--- a/master.css
+++ b/master.css
@@ -7,6 +7,7 @@
 
 body {
 	margin-top: 0px;
+	margin-left: 0px;
 }
 
 .search {
@@ -109,4 +110,45 @@ nav {
 
 #bell {
 	margin-top: 4px;
+}
+
+ul {
+	margin: 20px;
+	margin: 0;
+	padding: 0;
+	display: inline;
+}
+
+ul li:hover {
+	opacity: 1;
+}
+
+ul li {
+	opacity: 0.7;
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-top: 13px;
+	display: table-cell;
+	font-family: arial;
+	font-size: 0.8em;
+	list-style: none;
+}
+
+footer {
+	background-color: #F2F2F2;
+	border-top: 1px solid #D9D9D9;
+	width: 100%;
+	height: 40px;
+	position: absolute;
+	bottom: 0px;
+}
+
+#rightFooter {
+	display: inline;
+	float: right;
+}
+
+#leftFooter {
+	display: inline;
+	float: left;
 }
